--- a/public/css/main.css
+++ b/public/css/main.css
@@ -67,7 +67,7 @@
 
 #contentList {
     width: 100%;
-    height: 85%;
+    height: 100%;
     margin: auto;
 }
 
